[package]
name = "todo-cras"
version = "0.1.7"
authors = ["Chinmay Dalal <dalal.chinmay.0101@gmail.com"]
description = "Simple cli todo manager, useful as a shell greeting"
homepage = "https://sr.ht/~p00f/todo-cras"
repository = "https://git.sr.ht/~p00f/todo-cras"
license = "GPL-3.0-or-later"
keywords = ["todo", "cli"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
termcolor = "1.1"
chrono = "0.4"
fastrand = "1.5.0"
read_input = "0.8"
termion = "1.5.6"
home = "0.5.3"
